--- a/src/main/resources/com/vertex/vos/assets/colors.css
+++ b/src/main/resources/com/vertex/vos/assets/colors.css
@@ -7,5 +7,5 @@
     -var-accent-color: #5A90CF;
     -var-accent-black: #2c3034;
     -dark-accent-color: #2E578F;
-    -var-steel-blue: #4682B4;
+    -var-steel-blue: #B0BEC5;
 }
