--- a/src/main/resources/com/vertex/vos/ConsolidationSubModules.fxml
+++ b/src/main/resources/com/vertex/vos/ConsolidationSubModules.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 
-<BorderPane stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ConsolidationSubModulesController">
+<BorderPane stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ConsolidationSubModulesController">
     <top>
         <Label styleClass="header" text="Consolidation" BorderPane.alignment="TOP_LEFT">
             <graphic>
@@ -24,8 +24,8 @@
         </Label>
     </top>
     <center>
-        <TilePane fx:id="tilePane" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@assets/style.css" tileAlignment="TOP_LEFT" vgap="10.0" BorderPane.alignment="TOP_LEFT">
-            <VBox fx:id="openDispatchPlan" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+        <TilePane fx:id="tilePane" hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" stylesheets="@assets/style.css" tileAlignment="TOP_LEFT" vgap="10.0" BorderPane.alignment="TOP_LEFT">
+            <VBox fx:id="openPreDispatchPlan" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                 <children>
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
@@ -34,7 +34,7 @@
                                     <Image url="@assets/icons/Business%20Strategy.png" />
                                 </image>
                             </ImageView>
-                            <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Dispatch Plan" wrapText="true" />
+                            <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Pre-Dispatch Plan" wrapText="true" />
                         </children>
                     </HBox>
                 </children>
@@ -49,7 +49,7 @@
                </DropShadow>
             </effect>
             </VBox>
-         <VBox fx:id="openPickingDispatch" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+         <VBox fx:id="openDeliveryApproval" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
             <children>
                <HBox alignment="CENTER" spacing="10.0">
                   <children>
@@ -58,7 +58,7 @@
                            <Image url="@assets/icons/Summary List.png" />
                         </image>
                      </ImageView>
-                     <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Picking Dispatch" wrapText="true" />
+                     <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Delivery Approval" wrapText="true" />
                   </children>
                </HBox>
             </children>
@@ -73,7 +73,7 @@
                </DropShadow>
             </effect>
          </VBox>
-         <VBox fx:id="openPickingStockTransfer" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+         <VBox fx:id="openWithdrawalsApproval" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
             <children>
                <HBox alignment="CENTER" spacing="10.0">
                   <children>
@@ -82,7 +82,31 @@
                            <Image url="@assets/icons/Summary List.png" />
                         </image>
                      </ImageView>
-                     <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Picking Stock Transfer" wrapText="true" />
+                     <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Withdrawals Approval" wrapText="true" />
+                  </children>
+               </HBox>
+            </children>
+            <padding>
+               <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+            </padding>
+            <effect>
+               <DropShadow>
+                  <color>
+                     <Color opacity="0.5" />
+                  </color>
+               </DropShadow>
+            </effect>
+         </VBox>
+         <VBox fx:id="openInvoicing" alignment="CENTER_LEFT" layoutX="430.0" layoutY="10.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+            <children>
+               <HBox alignment="CENTER" spacing="10.0">
+                  <children>
+                     <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@assets/icons/Invoice.png" />
+                        </image>
+                     </ImageView>
+                     <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Invoicing" wrapText="true" />
                   </children>
                </HBox>
             </children>
